--- a/src/IssueBook.form
+++ b/src/IssueBook.form
@@ -234,7 +234,7 @@
     <Component class="javax.swing.JLabel" name="jLabel7">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/img/All Page Backgraound.jpg"/>
+          <Image iconType="3" name="/img/All Page Background.jpg"/>
         </Property>
       </Properties>
       <Constraints>
